# 3307Projcet

./: README.md  mydatabase.sqlite
3307/: Authentication.cpp  Authentication.h  Authentication_test.cpp  CMakeLists.txt  Course.cpp  Course.h  CourseManager.cpp  CourseManager.h  DatabaseManager.cpp  DatabaseManager.h  EnrollmentManager.cpp  EnrollmentManager.h  EnrollmentStrategies.cpp  EnrollmentStrategies.h  LoginInterface.cpp  LoginInterface.h  Main.cpp  MainInterface.cpp  MainInterface.h  MainMenuInterface.cpp  MainMenuInterface.h  NotificationInterface.cpp  NotificationInterface.h  PrerequisiteChecker.cpp  PrerequisiteChecker.h  Scheduler.cpp  Scheduler.h  SearchEngine.cpp  SearchEngine.h  Student.cpp  Student.h  User.cpp  User.h  Utils.h
